--- a/account/templates/account/notAuthenticated.html
+++ b/account/templates/account/notAuthenticated.html
@@ -27,17 +27,17 @@
 </style>
 
 <div class="container h-100 d-flex"
-	 style="position: absolute; left: 50%; transform: translateX(-50%); justify-content: center;">
-	<div class="d-flex" style="justify-content: center; align-items: center;">
-		<div class="user_card">
-			<div class="row col-10 offset-1 mt-5" style="text-align: center; color: white;">
-				Для доступка к приложению необходимо авторизоваться
-			</div>
-			<div class="row col-10 offset-1 mt-3 mb-5">
-				<button class="btn login_btn" type="submit" onclick="location.href='{% url 'login' %}'">
-					Авторизоваться
-				</button>
-			</div>
+	 style="position: absolute; left: 50%; transform: translateX(-50%); justify-content: center; align-items: center;">
+
+	<div class="user_card">
+		<div class="row col-10 offset-1 mt-5" style="text-align: center; color: white;">
+			Для доступка к приложению необходимо авторизоваться
+		</div>
+		<div class="row col-10 offset-1 mt-3 mb-5">
+			<button class="btn login_btn" type="submit" onclick="location.href='{% url 'login' %}'">
+				Авторизоваться
+			</button>
 		</div>
 	</div>
+
 </div>
